# practice-2023

./: Cargo.toml  README.md  devshell.nix  fetch_data.py  flake.nix  kill.py  test.py
src/: app.rs  database.rs  filepicker.rs  main.rs  sensors_tree.rs  ui.rs  utils.rs
src/app/: mod.rs  state.rs  tabs.rs
src/database/: import.rs  mod.rs  sensors.rs
src/filepicker/: mod.rs  state.rs  ui.rs
src/graph/: mod.rs  state.rs  ui.rs
src/sensors/: mod.rs  state.rs  ui.rs
src/ui/: graph_tab.rs  input.rs  menu.rs  mod.rs  sensors_tab.rs  utils.rs
