[package]
name = "practice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
itertools = "0.11.0"
rgb = "0.8.36"
rusqlite = { version = "0.29.0", features = ["array", "bundled"] }
serde = "1.0.171"
serde_json = "1.0.102"
textplots = "0.8.0"
