[package]
name = "practice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
crossterm = "0.26.1"
csv = "1.2.2"
encoding_rs = "0.8.32"
encoding_rs_io = "0.1.7"
itertools = "0.11.0"
rusqlite = { version = "0.29.0", features = ["array", "bundled"] }
serde = "1.0.171"
serde_json = "1.0.102"
tui = "0.19.0"
tui-tree-widget = "0.12.0"
